DetailsDrawer: limit height to avoid overflowing screen

--- a/style/main.scss
+++ b/style/main.scss
@@ -43,6 +43,7 @@ leptonic-drawer.army_details {
                                 rgb(100% 100%  100% / 80%));
     border: 1px solid gray;
     width: 40%;
+    max-height: calc(100vh - var(--app-bar-height) - 1px);
 }
 leptonic-drawer.right {
     right: 0;
